# DevOps3

./: Dockerfile  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  build_log.txt  config.status  configure.ac  configure.scan  configure~  funcA  main.cpp  myprogram  scriptA.sh  scriptB.sh  test
.deps/: HTTP_Server.Po  funcA.Po
.github/: automake.yml
.github/workflows/: ci.yml  debian.yml  multistage.yml  tests.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
debian/: autoreconf.after  autoreconf.before  changelog  control  rules  rules.in
debian/.debhelper/myprogram/: dbgsym-build-ids
debian/.debhelper/myprogram/dbgsym-root/DEBIAN/: control  md5sums
debian/myprogram/DEBIAN/: control  md5sums
myprogram-1.0/: Makefile  Makefile.am  Makefile.in  config.status  configure  funcA.h  myprogram
myprogram-1.0/.deps/: main.Po
test_tarball/myprogram-1.0/: Makefile  Makefile.am  config.status
tests/: test.cpp
